初始化代码