@@ -9,6 +9,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Locale;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class BannedPromptUtils {
@@ -24,7 +25,7 @@ public class BannedPromptUtils {
 			var resource = BannedPromptUtils.class.getResource("/banned-words.txt");
 			lines = FileUtil.readLines(resource, StandardCharsets.UTF_8);
 		}
-		BANNED_WORDS = lines.stream().filter(CharSequenceUtil::isNotBlank).toList();
+		BANNED_WORDS = lines.stream().filter(CharSequenceUtil::isNotBlank).collect(Collectors.toList());
 	}
 
 	public static boolean isBanned(String promptEn) {
